k8s/archive/multi-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: client
        image: sleepinglotus/complex-client
        resources:
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 3000
