k8s/archive/multi-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: sleepinglotus/complex-server:latest
          resources:
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 5000
